google optimized image assets

--- a/less/grid.less
+++ b/less/grid.less
@@ -59,6 +59,7 @@ header{
             }
             h3{
                 grid-column: span 9;
+                padding-bottom: 10px;
             }
             &#section-4-1{
                 h5{
