--- a/less/grid.less
+++ b/less/grid.less
@@ -43,7 +43,7 @@ header{
                 grid-gap: 20px;
                 grid-template-columns: repeat(9, 1fr);
                 grid-template-rows: repeat( autofill, max-content );
-                max-width: 1150px;
+                //max-width: 1150px;
                 
             }
             &#section-1{
