adding arrow svg

--- a/less/typography.less
+++ b/less/typography.less
@@ -199,9 +199,13 @@ nav a{
 .cross-through{
     font-size: 32px;
     font-weight: 100;
-    background-image: url('assets/arrow.svg');
+    background-image: url(../assets/arrow.svg);
     background-size: contain;
-    background-position: 0 0;
+    background-position: -20px 50%;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 90%;
+    grid-column: span 1;
 }
 
 //type section
