--- a/less/grid.less
+++ b/less/grid.less
@@ -394,7 +394,7 @@ h4{
     align-items: center;
 }
 p{
-    grid-column: span 7;
+    grid-column: span 6;
 }
 h5{
     grid-column: span 5;
@@ -434,4 +434,25 @@ h6, h2, picture{
 .underline{
     border-bottom: 1px solid @lt-gray;
     padding-bottom: 20px;
+}
+.row-twelve{
+    display: grid;
+    grid-column: span 10;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 10px;
+    .fourths{
+        grid-column: span 2;
+        grid-template-columns: 1fr;
+        p{
+            padding-right: 20px;
+        }   
+    }
+    .half{
+        grid-column: span 6;
+        grid-template-columns: 1fr 1fr;
+        h6{
+            grid-column: span 1;
+        }
+    }
+
 }
