--- a/less/main.less
+++ b/less/main.less
@@ -1,7 +1,11 @@
 @import 'variables';
-@import 'content';
 @import 'nav';
-@import 'typography';
 @import 'grid';
 @import 'mobile';
 @import 'tablet';
+@import 'content';
+@import 'typography';
+@import 'mobile';
+@import 'tablet';
+@import 'laptop';
+@import 'desktop';
