responsive size less files

--- a/less/content.less
+++ b/less/content.less
@@ -261,3 +261,13 @@ img{
     font-family: 'SegoeUISemiLight';
 }
 
+
+.long-bow{
+    display: inline-block;
+    width: 180px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-position: 0 80%;
+    background-size: contain;
+    background-image: url('../assets/arrow-2.svg');
+}
