--- a/less/typography.less
+++ b/less/typography.less
@@ -105,8 +105,8 @@ h3 {
 }
 
 h4{
-    font-size: 3.25em;
-    line-height: 60px;
+    font-size: 3.25em;// 60px
+    line-height: 1.1em;
     color: @body-text-black;
     font-family: 'SegoeUISemiBold';
     font-weight: 600;
@@ -253,7 +253,7 @@ a{
     color: @ms-blue;
 }
 .cta{
-   
+    padding: 30px 0;
     grid-column: span 3;
     grid-template-columns: fit-content(300px);
     a{
