--- a/styles/main.css
+++ b/styles/main.css
@@ -196,14 +196,14 @@ hr {
   grid-column: span 10;
 }
 .direction .users {
-  grid-column: span 2;
   grid-column-start: 1;
+  grid-column-end: 3;
   padding-bottom: 10px;
 }
 .direction .needs {
-  grid-column: span 3;
   padding-bottom: 10px;
   grid-column-start: 3;
+  grid-column-end: 5;
 }
 .tt-row {
   grid-column: span 10;
@@ -240,6 +240,7 @@ hr {
 .mag {
   grid-column-start: 2;
   grid-column-end: 7;
+  grid-template-columns: 1fr 1fr;
 }
 .mag h2 {
   color: #212121;
@@ -767,6 +768,15 @@ img {
   padding-top: 20px;
   font-family: 'SegoeUISemiLight';
 }
+.long-bow {
+  display: inline-block;
+  width: 180px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: 0 80%;
+  background-size: contain;
+  background-image: url('../assets/arrow-2.svg');
+}
 @font-face {
   font-family: "MWF-MDL2";
   src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg");
@@ -838,7 +848,7 @@ h3 {
 }
 h4 {
   font-size: 3.25em;
-  line-height: 60px;
+  line-height: 1.1em;
   color: #212121;
   font-family: 'SegoeUISemiBold';
   font-weight: 600;
@@ -977,6 +987,7 @@ a {
   color: #076dcc;
 }
 .cta {
+  padding: 30px 0;
   grid-column: span 3;
   grid-template-columns: fit-content(300px);
 }
