--- a/less/grid.less
+++ b/less/grid.less
@@ -33,7 +33,7 @@ header{
             grid-auto-rows: auto;
             display: grid;
             &.small{
-                padding-bottom: 0;
+                padding-bottom: 0
             }
             div.wrapper{
                 grid-auto-flow: row;
@@ -46,33 +46,12 @@ header{
                 //max-width: 1150px;
                 
             }
-            &#section-1{
-                h1, h6{
-                    grid-column: span 5;
-                }
-                &-1{
-                    h6,p{
-                        grid-column-start: 2;
-                        grid-column-end: 10;
-                    }
-                }
-            }
+
             h3{
                 grid-column: span 9;
                 padding-bottom: 10px;
             }
-            &#section-4-1{
-                h5{
-                    grid-column: span 5;
-                }
-                .half{
-                    grid-column: span 3;
-                }
-                .title{
-                    padding-bottom: 30px;
-                }
-    
-            }
+
         }
     }
 }
@@ -83,7 +62,7 @@ hr{
     margin-top: 20px;
     margin-bottom: 20px;
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 7;
     width: 100%; 
 }
 .one-half{
@@ -122,206 +101,8 @@ hr{
     }
 }
 
-//Audience
-.direction{
-    grid-column: span 10;
-    .users{
-        
-        grid-column-start: 1;
-        grid-column-end: 3;
-        padding-bottom: 10px;
-        
-    }
-    .needs {
-       
-        padding-bottom: 10px;
-        grid-column-start: 3;
-        grid-column-end: 5;
-    }
-}
-
-//Empowering
-.tt-row {
-    grid-column: span 10;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(8, 1fr);
-    &:before {
-        content: "";
-        width: 550%;
-        border: none;
-        background: @ltmid-gray;
-        height: 1px;
-        margin: 10px;
-        align-self: flex-end;
-    }
-}
-
-//channels
-.table-three{
-    .titles{
-        color: @body-text-black;
-        font-weight: 600;
-    }
-    .channel{
-        grid-column: span 1;
-        font-weight: 600;
-        grid-column-start: 1;
-    }
-    .role{
-        grid-column: span 2;
-        margin-bottom: 20px;
-    }
-    .message{
-        grid-column: span 2;
-    }
-}
-
-//editorial sections
-.mag{
-    grid-column-start: 2;
-    grid-column-end: 7;
-    grid-template-columns: 1fr 1fr;
-    h2{
-        
-        color: @body-text-black;
-    }
-    .thirds {
-        .desc, .title {
-            grid-column: span 1;
-            margin-top: 10px;
-        }
-        .title {
-            font-size: 22px;
-            color: @text-gray;
-        }
-        .desc{
-            font-size: 18px;
-            font-family: 'SegoeUISemiLight';
-        }
-
-    }
-}
-
-#section-3-3{
-    .thirds{
-        .title{
-            font-size: 28px;
-            font-family: 'SegoeUISemiBold';
-            letter-spacing: .025em;
-            padding-bottom: 10px;
-        }
-        .desc{
-            font-size: 15px;
-            line-height: 20px;
-            padding-right: 100px;
-            margin-bottom: 50px;
-        }
-    }
-    .dos, .donts{
-        grid-column: span 3;
-        .title{
-            font-family: 'SegoeUISemiBold';
-            text-decoration: none;
-        }
-    }
-
-}
-
-#section-3-4{
-    .dos, .donts, .explanation{
-        grid-column: span 2;
-        .title{
-            font-family: 'SegoeUISemiBold';
-            text-decoration: none;
-        }
-    }
-    .explanation .title{
-        font-size: 15px;
-        color: @text-gray;
-        font-weight: 600;
-        letter-spacing: .025em;
-    }
-
-}
-
-//Brand expression
-#section-4-2{
-    .thirds{
-        h5,p{
-            padding-bottom: 10px;
-        }
-    }
-    .donts{
-        grid-column: span 3;
-        p{
-            padding-bottom: 10px;
-        }
-    }
-    .dos, .donts {
-        .title, p{
-        font-size: 15px;
-        }
-    }
-}
-
-#section-4-3{
-    .half{
-        grid-column: span 3;
-        p{
-            grid-column-start: 1;
-            padding-bottom: 10px;
-        }
-    }
-}
-
-#section-4-8, #section-4-9{
-    .half, img{
-        grid-column: span 3;
-        grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 20px;
-        p{
-            padding-right: 0;
-            margin-top: 10px;
-        }
-        .half{
-            grid-column: span 1;
-            grid-template-columns: 1fr;
-            justify-items: stretch;
-            .swatch{
-                grid-column: span 8;
-            }
-        }
-    }
-}
 
 
-#section-5-3{
-    .half{
-        grid-column: span 4;
-        grid-template-columns: repeat(2,1fr);
-        grid-column-gap: 20px;
-        p{
-           margin: 10px 0;
-
-       } 
-    }
-    .subs{
-        grid-column: span 3;
-        grid-template-columns: repeat(3, 1fr);
-        grid-column-gap: 20px;
-        display: grid;
-    }
-    p{
-        margin-bottom: 10px;
-    }
-}
-
-#section-5-6{
-    .title, img{
-        margin-bottom: 20px;
-    }
-}
 
 
 .table-row{
@@ -338,25 +119,6 @@ hr{
     }
 }
 
-
-.dos{
-    .title, &.title{
-        color: @text-green;
-    }
-    p {
-        padding-right: 50px;
-    }
-}
-.donts {
-    
-    p{
-    text-decoration: line-through;
-    }
-    .title, &.title{
-        color: @text-red;
-        text-decoration: none;
-    }
-}
 
 
 .left, .middle, .right{
@@ -390,7 +152,30 @@ h4{
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-column-gap: 20px;
-    
+    &-lined{
+        grid-column: span 10;
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-column-gap: 20px;
+        &:before {
+            content: "";
+            width: 60%;
+            border: none;
+            background: @ltmid-gray;
+            height: 1px;
+            align-self: flex-end;
+            display: block;
+            position: absolute;
+        }
+        &.dark:before{
+            background: @dk-gray;
+        }
+    }
+    &-full{
+        grid-column: span 10;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
 .full-row{
     display: grid;
