--- a/less/content.less
+++ b/less/content.less
@@ -350,7 +350,7 @@ img{
 
 }
 
-//Brand
+//Brand expression
 #section-4-1{
     h5{
         grid-column: span 5;
@@ -366,7 +366,7 @@ img{
     }
 }
 
-//Brand expression
+
 #section-4-2{
     .thirds{
         h5,p{
@@ -395,6 +395,22 @@ img{
             padding-bottom: 10px;
         }
     }
+}
+
+#section-4-5{
+    
+    .fat-thirds{
+        padding-right: 30px;
+        grid-column: span 1;
+        img{
+            width: 250px;
+            height: 250px;
+        } 
+    }
+    
+
+            
+
 }
 
 #section-4-8, #section-4-9{
