--- a/less/content.less
+++ b/less/content.less
@@ -413,11 +413,13 @@ img{
 
 }
 
+
+
 #section-4-8, #section-4-9{
     .half, img{
-        grid-column: span 3;
+        grid-column: span 4;
         grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 20px;
+        grid-column-gap: 10px;
         p{
             padding-right: 0;
             margin-top: 10px;
@@ -429,6 +431,18 @@ img{
             .swatch{
                 grid-column: span 8;
             }
+        }
+    }
+}
+
+#section-4-8{
+    .row-seven{
+        grid-column-gap: 40px;
+    }
+    .half{
+        grid-column: span 2;
+        p{
+            margin-top: 0;
         }
     }
 }
