updates through section 5-5

--- a/less/content.less
+++ b/less/content.less
@@ -114,10 +114,10 @@ img{
         background: @dkdk-gray;
     }
 }
-#section-5{
-    background: @dk-gray;
+#section-5{//changed from design
+    background: @mid-gray;
     &-1{
-        background:@dk-gray;
+        background:@mid-gray;
     }
     &-2{
         background: @other-gray;
@@ -469,6 +469,12 @@ img{
     }
 }
 
+#section-5-5{
+    .thirds .title{
+        font-family: 'SegoeUISemiLight';
+        font-size: 2em;
+    }
+}
 #section-5-6{
     .title, img{
         margin-bottom: 20px;
