--- a/less/nav.less
+++ b/less/nav.less
@@ -23,7 +23,7 @@ nav{
             max-height: 0;
             overflow: hidden;
             transition: all 500ms ease-out;
-            //opacity: 0;
+            //opacity: 0;t
         }
         li {
             padding-left: 20px;
