--- a/less/content.less
+++ b/less/content.less
@@ -198,6 +198,7 @@ img{
         h6,p{
             grid-column-start: 2;
             grid-column-end: 10;
+            margin-bottom: 5px;
         }
     }
 }
@@ -272,8 +273,8 @@ img{
 //editorial sections 
 
 .mag{
-    grid-column-start: 2;
-    grid-column-end: 7;
+    grid-column-start: 1;
+    grid-column-end: 6;
     grid-template-columns: repeat(3, 1fr);
     display: grid;
     h2{
@@ -481,6 +482,10 @@ img{
     }
 }
 
+
+#section-5-9{
+
+}
 
 
 .overlay{
