--- a/less/grid.less
+++ b/less/grid.less
@@ -73,7 +73,7 @@ hr{
 .half{
     grid-column: span 4;
     display: grid;
-    grid-template-columns: 40px 1fr;
+    grid-template-columns: 1fr 1fr;
     .numeral{
         display: inline-block;
     }
