initial build section6

--- a/less/nav.less
+++ b/less/nav.less
@@ -52,6 +52,9 @@ nav{
                 .green {
                     color: @green;
                 }
+                .pink{
+                    color: @pink;
+                }
             }
             a{
                 color: white;
@@ -83,6 +86,11 @@ nav{
                     
                     &.active, &:hover{
                         color: @green-active;
+                    }
+                }
+                &.pink{
+                    &.active, &:hover{
+                        color: @pink-active;
                     }
                 }
             }
