--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,8 @@
 @orange-active: #ffab45;
 @green: #00b294;
 @green-active: #00ffd4;
+@pink: #e54d4d;
+@pink-active: #fb7373;
 @dk-gray: #cacaca;
 @lt-gray: #dadada;
 @lt-black: #2d2d2d;
