--- a/less/content.less
+++ b/less/content.less
@@ -188,7 +188,7 @@ img{
     }
     &.pink{
         background: @pink;
-        
+
     }
 }
 
@@ -534,6 +534,20 @@ img{
         padding-right: 100px;
     }
 }
+
+
+//Building out a communication section 6
+#section-6-1{
+    .half{
+        .title{
+            margin-bottom: 20px;
+        }
+        img{
+            grid-column: span 2;
+        }
+    }
+}
+
 .overlay{
     display: grid;
     grid-column: span 8;
