images for section 6

--- a/less/content.less
+++ b/less/content.less
@@ -540,14 +540,29 @@ img{
 #section-6-1{
     .half{
         .title{
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         img{
             grid-column: span 2;
+            min-height: 250px;
+
         }
     }
 }
 
+#section-6-2{
+    img{
+        grid-column: span 7;
+    }
+}
+
+#section-6-3{
+    .half{
+        title, img{
+            grid-column: span 2;
+        }
+    }
+}
 .overlay{
     display: grid;
     grid-column: span 8;
