--- a/less/typography.less
+++ b/less/typography.less
@@ -67,8 +67,8 @@ body {
 }
 
 h1 {
-    font-size: 80px;
-    line-height: 80px;
+    font-size: 5em;
+    line-height: 1em;
     font-weight: 300;
     color: @badge-gray;
 }
