--- a/styles/main.css
+++ b/styles/main.css
@@ -1,359 +1,3 @@
-nav {
-  background: #252525;
-  overflow-y: scroll;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  justify-self: stretch;
-  display: grid;
-}
-nav a {
-  text-decoration: none  !important;
-  padding-right: 20px;
-}
-nav ul {
-  list-style-type: none;
-  margin-top: 0;
-}
-nav ul#menu-list {
-  padding-left: 0;
-}
-nav ul.sub-nav {
-  padding-left: 20px;
-  max-height: 0;
-  overflow: hidden;
-  -webkit-transition: all 500ms ease-out;
-  transition: all 500ms ease-out;
-}
-nav ul li {
-  padding-left: 20px;
-}
-nav ul li.active {
-  background: #1d1d1d;
-  width: 100%;
-}
-nav ul li.active .sub-nav {
-  display: block;
-  max-height: 800px;
-  -webkit-transition: max-height 1s ease-in-out;
-  transition: max-height 1s ease-in-out;
-  -webkit-transition-delay: 500ms;
-  transition-delay: 500ms;
-}
-nav ul li.active .purple {
-  color: #b4a0ff;
-}
-nav ul li.active .blue {
-  color: #00bcf2;
-}
-nav ul li.active .yellow {
-  color: #bad80a;
-}
-nav ul li.active .orange {
-  color: #FF8C00;
-}
-nav ul li.active .green {
-  color: #00b294;
-}
-nav ul li.active .pink {
-  color: #e54d4d;
-}
-nav ul li a {
-  color: white;
-}
-nav ul li a.purple.active,
-nav ul li a.purple:hover {
-  color: #d8ceff;
-}
-nav ul li a.blue.active,
-nav ul li a.blue:hover {
-  color: #71dfff;
-}
-nav ul li a.yellow.active,
-nav ul li a.yellow:hover {
-  color: #d4f129;
-}
-nav ul li a.orange.active,
-nav ul li a.orange:hover {
-  color: #ffab45;
-}
-nav ul li a.green.active,
-nav ul li a.green:hover {
-  color: #00ffd4;
-}
-nav ul li a.pink.active,
-nav ul li a.pink:hover {
-  color: #fb7373;
-}
-nav button {
-  display: none;
-}
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-body {
-  background-color: #cacaca;
-  display: grid;
-  grid-template-columns: 260px 1fr;
-  margin: 0;
-}
-header {
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-#mainArea {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  display: grid;
-  grid-template-rows: minmax(50px, 1fr);
-}
-#mainArea main {
-  display: grid;
-}
-#mainArea main section {
-  grid-template-columns: 95px repeat(7, 1fr) 75px;
-  grid-auto-flow: row;
-  grid-auto-rows: auto;
-  display: grid;
-}
-#mainArea main section.small {
-  padding-bottom: 0;
-}
-#mainArea main section div.wrapper {
-  grid-auto-flow: row;
-  grid-column-start: 2;
-  grid-column-end: 10;
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(autofill, -webkit-max-content);
-  grid-template-rows: repeat(autofill, max-content);
-}
-#mainArea main section h3 {
-  grid-column: span 9;
-  padding-bottom: 10px;
-}
-hr {
-  border-top: 1px solid #bfbfbf;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  grid-column-start: 1;
-  grid-column-end: 7;
-  width: 100%;
-}
-.one-half {
-  grid-column: span 4;
-  display: grid;
-}
-.half {
-  grid-column: span 4;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.half .numeral {
-  display: inline-block;
-}
-.half p {
-  padding-right: 100px;
-}
-.thirds {
-  grid-column: span 2;
-  display: grid;
-}
-.thirds .title,
-.thirds .desc {
-  grid-column: span 3;
-}
-.thirds p,
-.thirds .content {
-  grid-column: span 2;
-}
-.thirds p .title,
-.thirds .content .title {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.table-row {
-  display: grid;
-  grid-column: span 6;
-  grid-template-columns: 1fr 1.5fr 1.75fr 1.75fr;
-  grid-gap: 20px;
-}
-.table-row.gray {
-  background: #dedede;
-  padding: 10px 2px;
-}
-.table-row > div {
-  display: grid;
-}
-.left,
-.middle,
-.right {
-  grid-column: span 2;
-  color: #252525;
-  font-size: 24px;
-}
-.left {
-  text-align: right;
-  margin-right: -4em;
-}
-.right {
-  text-align: left;
-  margin-left: -4em;
-}
-.middle {
-  font-weight: 600;
-  font-family: 'SegoeUISemiBold';
-  text-align: center;
-}
-h4 {
-  grid-column: span 5;
-}
-.row {
-  grid-column: span 10;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-column-gap: 20px;
-}
-.row-lined {
-  grid-column: span 10;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-column-gap: 20px;
-}
-.row-lined:before {
-  content: "";
-  width: 60%;
-  border: none;
-  background: #e2e2e2;
-  height: 1px;
-  -ms-flex-item-align: end;
-  align-self: flex-end;
-  display: block;
-  position: absolute;
-}
-.row-lined.dark:before {
-  background: #cacaca;
-}
-.row-full {
-  grid-column: span 10;
-  display: grid;
-  grid-template-columns: 1fr;
-}
-.full-row {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-column: span 6;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-p {
-  grid-column: span 6;
-}
-h5 {
-  grid-column: span 5;
-}
-h6,
-h2,
-picture {
-  grid-column: span 9;
-}
-.full {
-  grid-column: span 8;
-  text-decoration: none;
-}
-.full:hover {
-  text-decoration: underline;
-}
-.fat-thirds {
-  grid-column: span 2;
-  grid-template-columns: 1fr;
-}
-.fat-thirds img {
-  width: 100%;
-}
-.fat-thirds p {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.single {
-  grid-column: span 1;
-}
-.single p {
-  margin-top: 10px;
-}
-.v-center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.underline {
-  border-bottom: 1px solid #dadada;
-  padding-bottom: 20px;
-}
-.row-twelve {
-  display: grid;
-  grid-column: span 10;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: 10px;
-}
-.row-twelve .fourths {
-  grid-column: span 2;
-  grid-template-columns: 1fr;
-}
-.row-twelve .fourths p {
-  padding-right: 20px;
-}
-.row-twelve .half {
-  grid-column: span 6;
-  grid-template-columns: 1fr 1fr;
-}
-.row-twelve .half h6 {
-  grid-column: span 1;
-}
-.row-five {
-  grid-column: span 10;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 20px 40px;
-  display: grid;
-}
-.row-five .thirds {
-  grid-column: span 1;
-}
-.row-seven {
-  grid-column: span 10;
-  grid-template-columns: repeat(7, 1fr);
-  grid-gap: 10px;
-  display: grid;
-}
-.row-seven .half {
-  grid-column: span 2;
-  grid-template-columns: 1fr 1fr;
-}
-.row-top-five {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-column: span 10;
-  grid-row-gap: 20px;
-}
-@media all and (max-width: 1200px) {
-  .row-top-five .half {
-    grid-column: span 6 !important;
-  }
-}
-.row-top-five .half {
-  grid-column: span 5;
-  grid-template-columns: 30px 1fr;
-}
 h1,
 h2,
 h3,
@@ -914,6 +558,362 @@ img {
   background-size: contain;
   background-image: url('../assets/arrow-2.svg');
 }
+nav {
+  background: #252525;
+  overflow-y: scroll;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  justify-self: stretch;
+  display: grid;
+}
+nav a {
+  text-decoration: none  !important;
+  padding-right: 20px;
+}
+nav ul {
+  list-style-type: none;
+  margin-top: 0;
+}
+nav ul#menu-list {
+  padding-left: 0;
+}
+nav ul.sub-nav {
+  padding-left: 20px;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 500ms ease-out;
+  transition: all 500ms ease-out;
+}
+nav ul li {
+  padding-left: 20px;
+}
+nav ul li.active {
+  background: #1d1d1d;
+  width: 100%;
+}
+nav ul li.active .sub-nav {
+  display: block;
+  max-height: 800px;
+  -webkit-transition: max-height 1s ease-in-out;
+  transition: max-height 1s ease-in-out;
+  -webkit-transition-delay: 500ms;
+  transition-delay: 500ms;
+}
+nav ul li.active .purple {
+  color: #b4a0ff;
+}
+nav ul li.active .blue {
+  color: #00bcf2;
+}
+nav ul li.active .yellow {
+  color: #bad80a;
+}
+nav ul li.active .orange {
+  color: #FF8C00;
+}
+nav ul li.active .green {
+  color: #00b294;
+}
+nav ul li.active .pink {
+  color: #e54d4d;
+}
+nav ul li a {
+  color: white;
+}
+nav ul li a.purple.active,
+nav ul li a.purple:hover {
+  color: #d8ceff;
+}
+nav ul li a.blue.active,
+nav ul li a.blue:hover {
+  color: #71dfff;
+}
+nav ul li a.yellow.active,
+nav ul li a.yellow:hover {
+  color: #d4f129;
+}
+nav ul li a.orange.active,
+nav ul li a.orange:hover {
+  color: #ffab45;
+}
+nav ul li a.green.active,
+nav ul li a.green:hover {
+  color: #00ffd4;
+}
+nav ul li a.pink.active,
+nav ul li a.pink:hover {
+  color: #fb7373;
+}
+nav button {
+  display: none;
+}
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+body {
+  background-color: #cacaca;
+  display: grid;
+  grid-template-columns: 260px 1fr;
+  margin: 0;
+}
+header {
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+#mainArea {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: grid;
+  grid-template-rows: minmax(50px, 1fr);
+}
+#mainArea main {
+  display: grid;
+}
+#mainArea main section {
+  grid-template-columns: 95px repeat(7, 1fr) 75px;
+  grid-auto-flow: row;
+  grid-auto-rows: auto;
+  display: grid;
+}
+#mainArea main section.small {
+  padding-bottom: 0;
+}
+#mainArea main section div.wrapper {
+  grid-auto-flow: row;
+  grid-column-start: 2;
+  grid-column-end: 10;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(autofill, -webkit-max-content);
+  grid-template-rows: repeat(autofill, max-content);
+}
+#mainArea main section h3 {
+  grid-column: span 9;
+  padding-bottom: 10px;
+}
+hr {
+  border-top: 1px solid #bfbfbf;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  grid-column-start: 1;
+  grid-column-end: 7;
+  width: 100%;
+}
+.one-half {
+  grid-column: span 4;
+  display: grid;
+}
+.half {
+  grid-column: span 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.half .numeral {
+  display: inline-block;
+}
+.half p {
+  padding-right: 100px;
+}
+.thirds {
+  grid-column: span 2;
+  display: grid;
+}
+.thirds .title,
+.thirds .desc {
+  grid-column: span 3;
+}
+.thirds p,
+.thirds .content {
+  grid-column: span 2;
+}
+.thirds p .title,
+.thirds .content .title {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.table-row {
+  display: grid;
+  grid-column: span 6;
+  grid-template-columns: 1fr 1.5fr 1.75fr 1.75fr;
+  grid-gap: 20px;
+}
+.table-row.gray {
+  background: #dedede;
+  padding: 10px 2px;
+}
+.table-row > div {
+  display: grid;
+}
+.left,
+.middle,
+.right {
+  grid-column: span 2;
+  color: #252525;
+  font-size: 24px;
+}
+.left {
+  text-align: right;
+  margin-right: -4em;
+}
+.right {
+  text-align: left;
+  margin-left: -4em;
+}
+.middle {
+  font-weight: 600;
+  font-family: 'SegoeUISemiBold';
+  text-align: center;
+}
+h4 {
+  grid-column: span 5;
+}
+.row {
+  grid-column: span 10;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-column-gap: 20px;
+}
+.row-lined {
+  grid-column: span 10;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-column-gap: 20px;
+}
+.row-lined:before {
+  content: "";
+  width: 60%;
+  border: none;
+  background: #e2e2e2;
+  height: 1px;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  display: block;
+  position: absolute;
+}
+.row-lined.dark:before {
+  background: #cacaca;
+}
+.row-full {
+  grid-column: span 10;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.full-row {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-column: span 6;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+p {
+  grid-column: span 6;
+}
+h5 {
+  grid-column: span 5;
+}
+h6,
+h2,
+picture {
+  grid-column: span 9;
+}
+.full {
+  grid-column: span 8;
+  text-decoration: none;
+}
+.full:hover {
+  text-decoration: underline;
+}
+.fat-thirds {
+  grid-column: span 2;
+  grid-template-columns: 1fr;
+}
+.fat-thirds img {
+  width: 100%;
+}
+.fat-thirds p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.single {
+  grid-column: span 1;
+}
+.single p {
+  margin-top: 10px;
+}
+.v-center {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.underline {
+  border-bottom: 1px solid #dadada;
+  padding-bottom: 20px;
+}
+.row-twelve {
+  display: grid;
+  grid-column: span 10;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 10px;
+}
+.row-twelve .fourths {
+  grid-column: span 2;
+  grid-template-columns: 1fr;
+}
+.row-twelve .fourths p {
+  padding-right: 20px;
+}
+.row-twelve .half {
+  grid-column: span 6;
+  grid-template-columns: 1fr 1fr;
+}
+.row-twelve .half h6 {
+  grid-column: span 1;
+}
+.row-five {
+  grid-column: span 10;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px 40px;
+  display: grid;
+}
+.row-five .thirds {
+  grid-column: span 1;
+}
+.row-seven {
+  grid-column: span 10;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 10px;
+  display: grid;
+}
+.row-seven .half {
+  grid-column: span 2;
+  grid-template-columns: 1fr 1fr;
+}
+.row-top-five {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column: span 10;
+  grid-row-gap: 20px;
+}
+@media all and (max-width: 1200px) {
+  .row-top-five .half {
+    grid-column: span 6 !important;
+  }
+}
+.row-top-five .half {
+  grid-column: span 5;
+  grid-template-columns: 30px 1fr;
+}
 @font-face {
   font-family: "MWF-MDL2";
   src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg");
@@ -950,8 +950,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 h1 {
-  font-size: 80px;
-  line-height: 80px;
+  font-size: 5em;
+  line-height: 1em;
   font-weight: 300;
   color: #333333;
 }
@@ -1178,11 +1178,30 @@ a {
     grid-column-end: 7;
   }
 }
+/* 
+*
+*  Desktop 1084px-1400px
+*
+*
+*/
 @media all and (max-width: 1400px) {
+  #section-1 h1 {
+    font-size: 4.5em;
+  }
   h4 {
-    font-size: 2.25em;
+    font-size: 2.5em;
     line-height: 1.1em;
-    grid-column: span 7;
+    grid-column: span 9;
+    margin-right: 20px;
+  }
+  h5 {
+    grid-column: span 9;
+    margin-right: 20px;
+  }
+  h6 {
+    grid-column: span 9;
+    margin-right: 20px;
+    font-size: 1.8em;
   }
   section {
     padding-top: 70px;
@@ -1207,5 +1226,26 @@ a {
   }
   .overlay .right {
     grid-column-end: 7;
+  }
+  #mainArea {
+    padding-top: 0;
+  }
+  #mainArea main section {
+    grid-template-columns: 65px repeat(7, 1fr) 65px;
+  }
+  #section-1 h1,
+  #section-1 h6,
+  #section-1 p {
+    grid-column: span 9;
+    margin-right: 20px;
+  }
+  #section-1-1 p {
+    padding-right: 50px;
+  }
+  #section-1-2 h5 {
+    grid-column: span 9;
+  }
+  .cross-through {
+    font-size: 28px;
   }
 }
