section 1 small desktop

--- a/less/desktop.less
+++ b/less/desktop.less
@@ -85,6 +85,12 @@
       h5{
         grid-column: span 9;
       }
+      .row-twelve .half{
+        grid-column: span 8;
+      }
+      div>p{
+        grid-column: span 7;
+      }
     }
   }
 
