--- a/less/nav.less
+++ b/less/nav.less
@@ -6,7 +6,7 @@ nav{
     top:0;
     justify-self: stretch;
     display: grid;
-    
+    padding-top: 50px;
     a{
         text-decoration: none  !important;
         padding-right: 20px;
