--- a/less/typography.less
+++ b/less/typography.less
@@ -69,8 +69,9 @@ body {
 h1 {
     font-size: 80px;
     line-height: 80px;
-    font-weight: 300;
+    font-weight: 100;
     color: @badge-gray;
+    margin-bottom: 5px;
 }
 
 h2 {
@@ -122,7 +123,7 @@ h5{
 h6{
     font-weight: 400;
     font-size: 2em;
-    line-height: 1.1em;
+    line-height: 1.2em;
     &.small{
         font-size: 28px;
     }
